@@ -2,6 +2,7 @@ V.NEXT
 ----------
 - [MINOR] Send client id as part of request bundle for getSsoToken Api (#2064)
 - [PATCH] Wire new Broker Discovery Client into MSAL - still disabled by default (#2057)
+- [MINOR] Cache handshake failure and add expiry time support in Hello Cache (#2074)
 
 V.13.0.1
 ----------
